# labelstudio-tools

./: .gitignore  CLI.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
src/: update_cachelabels.py
src/labelstudio_tools/: __init__.py  auth.py  cli.py  cli_project.py  cli_tasks.py  cli_utils.py  config.py  config_wizard.py  core.py  projman.py  snapshot_download.py  taskclass.py  taskman.py  ui_builder.py
src/labelstudio_tools/utils/: __init__.py  s3_tools.py  task_filtering.py  utils.py
src/project_builder/: ui_builder.py
src/utils/: __init__.py  task_filtering.py
tests/: test_cli.py  test_config.py  test_config_wizard.py  test_taskclass.py
